--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/photo_search_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:hardwareAccelerated="true">
+
 
         <activity
             android:name=".MainActivity"
@@ -39,22 +41,13 @@
 
 
         <provider
-
             android:name="android.support.v4.content.FileProvider"
-
             android:authorities="com.example.imnobody.photosearch.fileprovider"
-
             android:exported="false"
-
             android:grantUriPermissions="true">
-
             <meta-data
-
-
                 android:name="android.support.FILE_PROVIDER_PATHS"
-
                 android:resource="@xml/fileprovider" />
-
         </provider>
 
     </application>
